// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`equalTo() should fail when value is not equal to validValue 1`] = `
Object {
  "errors": Array [],
  "message": "Value should equal to test",
  "path": Array [],
  "value": "text",
}
`;

exports[`equalTo() should fail when value is not equal to validValue which is a reference 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [],
      "message": "Value should equal to test",
      "path": Array [
        "b",
      ],
      "value": "text",
    },
  ],
  "message": "Value should have a valid shape",
  "path": Array [],
  "value": Object {
    "a": "test",
    "b": "text",
  },
}
`;

exports[`equalTo() should support custom message 1`] = `
Object {
  "errors": Array [],
  "message": "Custom message",
  "path": Array [],
  "value": "test",
}
`;
